--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -690,6 +690,26 @@ section.lazy-placeholder:after {
 .cid-qTkA127IK8 H1 {
   text-align: center;
 }
+.cid-sr0mf9pINj {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-sr0mf9pINj h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sr0mf9pINj p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sr0mf9pINj .card-box {
+  padding-top: 2rem;
+}
+.cid-sr0mf9pINj .card-wrapper {
+  height: 100%;
+}
 .cid-scrg03jrKG {
   padding-top: 90px;
   padding-bottom: 30px;
@@ -10458,6 +10478,730 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 767px) {
   .cid-sqJWlPOx8N .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-sqZRD13aOx {
+  padding-top: 120px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-sqZRD13aOx .images-container.container-fluid {
+  padding: 0;
+}
+.cid-sqZRD13aOx .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-sqZRD13aOx .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-sqZRD13aOx .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-sqZRD13aOx .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-sqZRD13aOx .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-sqZRD13aOx .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-sqZRD13aOx .img-item {
+    width: 100% !important;
+  }
+  .cid-sqZRD13aOx .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-sqZRD1uW5f {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-sqZRD1uW5f .mbr-text,
+.cid-sqZRD1uW5f blockquote {
+  color: #767676;
+}
+.cid-sqZRD1DDaC {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sqZRD1DDaC .item {
+  padding-bottom: 2rem;
+}
+.cid-sqZRD1DDaC .item-wrapper {
+  height: 100%;
+}
+.cid-sqZRD1DDaC .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-sqZRD1DDaC .carousel-control,
+.cid-sqZRD1DDaC .close {
+  background: #1b1b1b;
+}
+.cid-sqZRD1DDaC .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-sqZRD1DDaC .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-sqZRD1DDaC .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 35px;
+  font-weight: 300;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  line-height: 70px;
+  border: none;
+  text-align: center;
+  text-shadow: none;
+  z-index: 5;
+  -webkit-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  font-family: 'MobiriseIcons';
+}
+.cid-sqZRD1DDaC .close::before {
+  content: '\e91a';
+}
+.cid-sqZRD1DDaC .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-sqZRD1DDaC .carousel-control {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  top: 50%;
+  margin-top: -35px;
+  line-height: 70px;
+  border-radius: 50%;
+  font-size: 35px;
+  border: 0;
+  opacity: 0.5;
+  text-shadow: none;
+  z-index: 5;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+.cid-sqZRD1DDaC .carousel-inner > .active {
+  display: block;
+}
+.cid-sqZRD1DDaC .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sqZRD1DDaC .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sqZRD1DDaC .carousel-control .icon-next,
+.cid-sqZRD1DDaC .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-sqZRD1DDaC .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-sqZRD1DDaC .carousel-control,
+  .cid-sqZRD1DDaC .carousel-indicators,
+  .cid-sqZRD1DDaC .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sqZRD1DDaC .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-sqZRD1DDaC .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-sqZRD1DDaC .carousel-indicators {
+  bottom: 0;
+  margin-bottom: 3px;
+}
+@media (max-width: 991px) {
+  .cid-sqZRD1DDaC .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sqZRD1DDaC .carousel-indicators {
+    display: none;
+  }
+}
+.cid-sqZRD1DDaC .carousel-indicators .active,
+.cid-sqZRD1DDaC .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #1b1b1b;
+  opacity: 0.5;
+  border: 4px solid #1b1b1b;
+}
+.cid-sqZRD1DDaC .carousel-indicators .active {
+  background: #fff;
+}
+.cid-sqZRD1DDaC .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-sqZRD1DDaC .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-sqZRD1DDaC .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-sqZRD1DDaC .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-sqZRD1DDaC .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-sqZRD1DDaC .modal-body .carousel-item {
+  top: 50%;
+  transform: translateY(-50%);
+}
+.cid-sqZRD1DDaC .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-sqZRD1DDaC .carousel {
+  width: 100%;
+}
+.cid-sqZRD1DDaC .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-sqZRD1DDaC .modal.fade .modal-dialog {
+  -webkit-transition: margin-top 0.3s ease-out;
+  -moz-transition: margin-top 0.3s ease-out;
+  -o-transition: margin-top 0.3s ease-out;
+  transition: margin-top 0.3s ease-out;
+}
+.cid-sqZRD1DDaC .modal.fade .modal-dialog,
+.cid-sqZRD1DDaC .modal.in .modal-dialog {
+  -webkit-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+  transform: none;
+}
+.cid-sqZRD1DDaC .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-sqZRD1DDaC a {
+  display: block;
+}
+.cid-sqZRD1DDaC a.img {
+  pointer-events: none;
+}
+.cid-sqZRD2kuAH .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-sqZRD2kuAH .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-sqZRD2kuAH a {
+  font-style: normal;
+}
+.cid-sqZRD2kuAH .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-sqZRD2kuAH .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-sqZRD2kuAH .nav-item:focus,
+.cid-sqZRD2kuAH .nav-link:focus {
+  outline: none;
+}
+.cid-sqZRD2kuAH .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-sqZRD2kuAH .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-sqZRD2kuAH .menu-logo {
+  margin-right: auto;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-sqZRD2kuAH .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-sqZRD2kuAH .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-sqZRD2kuAH .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-sqZRD2kuAH .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-sqZRD2kuAH .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-sqZRD2kuAH .dropdown .dropdown-menu {
+  background: #ffffff;
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-sqZRD2kuAH .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-sqZRD2kuAH .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sqZRD2kuAH .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-sqZRD2kuAH .dropdown.open > .dropdown-menu {
+  visibility: visible;
+}
+.cid-sqZRD2kuAH .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-sqZRD2kuAH .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-sqZRD2kuAH .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-sqZRD2kuAH .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-sqZRD2kuAH .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-sqZRD2kuAH .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-sqZRD2kuAH .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-sqZRD2kuAH button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-sqZRD2kuAH button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-sqZRD2kuAH button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-sqZRD2kuAH button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-sqZRD2kuAH button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sqZRD2kuAH button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sqZRD2kuAH button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-sqZRD2kuAH nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sqZRD2kuAH nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-sqZRD2kuAH nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-sqZRD2kuAH nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sqZRD2kuAH .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sqZRD2kuAH .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing,
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-sqZRD2kuAH .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-sqZRD2kuAH .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sqZRD2kuAH .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-sqZRD2kuAH .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-sqZRD2kuAH .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-sqZRD2kuAH .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-sqZRD2kuAH.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sqZRD2kuAH img {
+    height: 3.8rem !important;
+  }
+  .cid-sqZRD2kuAH .btn {
+    display: -webkit-flex;
+  }
+  .cid-sqZRD2kuAH button.navbar-toggler {
+    display: block;
+  }
+  .cid-sqZRD2kuAH .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-sqZRD2kuAH .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse.collapsing,
+  .cid-sqZRD2kuAH .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-nav,
+  .cid-sqZRD2kuAH .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-sqZRD2kuAH .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-buttons,
+  .cid-sqZRD2kuAH .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-sqZRD2kuAH .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-sqZRD2kuAH .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-sqZRD2kuAH .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-sqZRD2kuAH .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-sqZRD2kuAH .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-sqZRD2kuAH .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-sqZRD2kuAH .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-sqZRD2kuAH .nav-link:hover,
+.cid-sqZRD2kuAH .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-sqZRD3FNon {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-sqZRD3FNon .content {
+    text-align: center;
+  }
+  .cid-sqZRD3FNon .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sqZRD3FNon .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sqZRD3FNon .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-sqZRD3FNon .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-sqZRD3FNon .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-sqZRD3FNon .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-sqZRD3FNon .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-sqZRD3FNon .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-sqZRD3FNon .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sqZRD3FNon .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sqZRD3FNon .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sqZRD3FNon .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
