--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -692,7 +692,7 @@ section.lazy-placeholder:after {
 }
 .cid-sr0mf9pINj {
   padding-top: 90px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-sr0mf9pINj h4 {
@@ -711,7 +711,7 @@ section.lazy-placeholder:after {
   height: 100%;
 }
 .cid-scrg03jrKG {
-  padding-top: 90px;
+  padding-top: 0px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -973,6 +973,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
@@ -1435,6 +1440,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
@@ -1974,6 +1984,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
 }
@@ -2452,6 +2467,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
 }
@@ -2922,6 +2942,11 @@ section.lazy-placeholder:after {
 .cid-s5vrmH8qq7 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s5vrmH8qq7 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-s5vrmH8qq7 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-s5vrmH8qq7 .collapsed button.navbar-toggler {
   display: block;
@@ -3403,6 +3428,11 @@ section.lazy-placeholder:after {
 .cid-s5vDSg6pNM .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-s5vDSg6pNM .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-s5vDSg6pNM .collapsed button.navbar-toggler {
   display: block;
 }
@@ -3873,6 +3903,11 @@ section.lazy-placeholder:after {
 .cid-s5vOVg7NfE .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s5vOVg7NfE .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-s5vOVg7NfE .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-s5vOVg7NfE .collapsed button.navbar-toggler {
   display: block;
@@ -4350,6 +4385,11 @@ section.lazy-placeholder:after {
 .cid-s5RkCu3oIx .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-s5RkCu3oIx .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-s5RkCu3oIx .collapsed button.navbar-toggler {
   display: block;
 }
@@ -4820,6 +4860,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
@@ -5392,6 +5437,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
 }
@@ -5853,6 +5903,11 @@ section.lazy-placeholder:after {
 .cid-sciwT8oW3U .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-sciwT8oW3U .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-sciwT8oW3U .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-sciwT8oW3U .collapsed button.navbar-toggler {
   display: block;
@@ -6365,6 +6420,11 @@ section.lazy-placeholder:after {
 .cid-scitFHR8Qo .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-scitFHR8Qo .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-scitFHR8Qo .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-scitFHR8Qo .collapsed button.navbar-toggler {
   display: block;
@@ -7139,6 +7199,11 @@ section.lazy-placeholder:after {
 .cid-scru2wV8Nz .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-scru2wV8Nz .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-scru2wV8Nz .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-scru2wV8Nz .collapsed button.navbar-toggler {
   display: block;
@@ -8270,6 +8335,11 @@ section.lazy-placeholder:after {
 .cid-sfSTl2HIKK .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-sfSTl2HIKK .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-sfSTl2HIKK .collapsed button.navbar-toggler {
   display: block;
 }
@@ -9138,6 +9208,11 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
+@media (min-width: 1024px) {
+  .cid-s5dLX3UWVr .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
 .cid-s5dLX3UWVr .collapsed button.navbar-toggler {
   display: block;
 }
@@ -9665,6 +9740,11 @@ section.lazy-placeholder:after {
 .cid-smgrL1uis0 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-smgrL1uis0 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-smgrL1uis0 .collapsed button.navbar-toggler {
   display: block;
@@ -10199,6 +10279,11 @@ section.lazy-placeholder:after {
 .cid-smgrL1uis0 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-smgrL1uis0 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-smgrL1uis0 .collapsed button.navbar-toggler {
   display: block;
@@ -10987,6 +11072,11 @@ section.lazy-placeholder:after {
 .cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-sqZRD2kuAH .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-sqZRD2kuAH .collapsed button.navbar-toggler {
   display: block;
